src/objects/Meetup__c.object
<CustomObject>
    <description>A meeting (or event) that can act in a more robust way than the standard Event SObject.</description>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Venue_Formula_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Venue__c, &apos;Venue Formula Link&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Formula Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Meetups</relationshipLabel>
        <relationshipName>Meetups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meetup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Venue__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meetup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetups</pluralLabel>
    <recordTypes>
        <fullName>Organizer_Record_Type</fullName>
        <active>true</active>
        <label>Organizer Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>